# LLM-evaluation

./: .gitignore  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fingerprint_demo.py  prompts.txt
scripts/: build_item_bank.py  build_rag_bank.py  deploy_space.py
space/: README.md  app.py  requirements.txt
src/caliper/: __init__.py  cli.py  parsing.py  prompts.py  runner.py  types.py
src/caliper/adapters/: __init__.py  base.py  hf_inference.py  openai_compat.py  replay.py  simulate.py
src/caliper/calibration/: __init__.py
src/caliper/contamination/: __init__.py
src/caliper/data/: item_bank.json
src/caliper/irt/: __init__.py  adaptive.py  model.py
src/caliper/judge/: __init__.py  pairwise.py  ranking.py
src/caliper/rag/: __init__.py  bridge.py  faithfulness.py  prompts.py  relevance.py  suite.py  types.py
src/caliper/rag/data/: rag_bank.json
src/caliper/report/: __init__.py  fingerprint.py  html.py
src/caliper/robustness/: __init__.py  perturb.py  suite.py
tests/: conftest.py  test_adapters.py  test_calibration.py  test_contamination.py  test_irt.py  test_judge.py  test_parsing.py  test_rag.py  test_ranking.py  test_report_cli.py  test_robustness.py
